# Task-Manager

./: .coverage  README.md  pract.py  pyproject.toml  requirements.txt
data/: tasks.json
src/task_manager/: main.py  models.py  storage.py
task_manager/: models.py
tests/: test_model.py  test_storage.py
